--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -269,3 +269,9 @@ This, together with the audio samples, provides evidence for our earlier hypothe
 This also causes the poorly-cloned outputs of XTTSv2 and StyleTTS2 to be rated much higher in terms of intelligibility.
 
 ## 6·Conclusions: 结论
+
+In this work we looked to improve the robustness of discrete neural codec-based TTS models.
+To this end, we proposed ***MARS6***, which combines several existing and new techniques for speech language model design, training, and inference.
+To evaluate robustness, we proposed a new test set built on the EARS dataset, consisting of harder and more diverse speech utterances than in other benchmarks.
+We compared ***MARS6*** against several prior state-of-the-art TTS baselines, and found that ***MARS6*** achieves competitive results with models many multiples larger, particularly in terms of target speaker similarity.
+Taken together, we show how many recent language and speech language modelling techniques can be effectively combined to achieve a compact, robust, and expressive TTS model.
