--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -5,12 +5,12 @@
 
 - 标题: "MARS6: A Small and Robust Hierarchical-Codec Text-to-Speech Model"
 - 作者:
-  - 01 Matthew Baas,
-  - 02 Pieter Scholtz,
-  - 03 Arnav Mehta,
-  - 04 Elliott Dyson,
-  - 05 Akshat Prakash,
-  - 06 Herman Kamper
+  - 01 Matthew Baas (Camb-AI)
+  - 02 Pieter Scholtz (Camb-AI)
+  - 03 Arnav Mehta (Camb-AI)
+  - 04 Elliott Dyson (Camb-AI)
+  - 05 Akshat Prakash (Camb-AI)
+  - 06 Herman Kamper (Camb-AI)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2501.05787)
   - [Publication]() ICASSP 2025
@@ -24,14 +24,30 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 Codec-based text-to-speech (TTS) models have shown impressive quality with zero-shot voice cloning abilities.
 However, they often struggle with more expressive references or complex text inputs.
-We present MARS6, a robust encoder-decoder transformer for rapid, expressive TTS.
-MARS6 is built on recent improvements in spoken language modelling.
+We present ***MARS6***, a robust encoder-decoder transformer for rapid, expressive TTS.
+***MARS6*** is built on recent improvements in spoken language modelling.
 Utilizing a hierarchical setup for its decoder, new speech tokens are processed at a rate of only 12 Hz, enabling efficient modelling of long-form text while retaining reconstruction quality.
 We combine several recent training and inference techniques to reduce repetitive generation and improve output stability and quality.
-This enables the 70M-parameter MARS6 to achieve similar performance to models many times larger.
+This enables the 70M-parameter ***MARS6*** to achieve similar performance to models many times larger.
 We show this in objective and subjective evaluations, comparing TTS output quality and reference speaker cloning ability.
+
+</details>
+<br>
+
+基于编解码器的文本转语音模型在零样本声音克隆能力方面展现出了令人印象深刻的质量.
+然而, 它们往往在处理更具表现力的参考音频或复杂文本输入时表现不佳.
+
+我们提出了 ***MARS6***, 一个健壮的编码器-解码器 Transformer, 用于快速且富有表现力的文本转语音.
+***MARS6*** 建立在最近在口语语言建模方面的改进之上.
+在解码器中使用分层设置, 新的语音 Token 以仅 12 Hz 的速率进行处理, 从而在保持重构质量的同时高效地对长文本建模.
+我们结合了几种最近的训练和推理技术来减少重复生成并提升输出的稳定性和质量.
+这使得 70M 参数量的 ***MARS6*** 能够达到与规模更大数倍的模型的相似性能.
+我们在客观和主观评估中展示这一点, 比较了 TTS 输出质量和参考说话人的克隆能力.
 
 ## 1·Introduction: 引言
 
