Fix MARS6 Links

--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -51,20 +51,20 @@ We show this in objective and subjective evaluations, comparing TTS output quali
 
 ## 1·Introduction: 引言
 
-Text-to-speech (TTS) systems have improved many-fold in recent years, showcasing new capabilities in speaker cloning capability and naturalness~\cite{casanova2024xtts_interspeech, chen2024valle2neuralcodec, li2024styletts}.
-One promising area in TTS is spoken language models (SLMs)~\cite{wang2023neuralcodeclanguagemodels}, where a neural audio codec converts speech into a sequence of discrete tokens.
+Text-to-speech (TTS) systems have improved many-fold in recent years, showcasing new capabilities in speaker cloning capability and naturalness ([XTTSv2 [1]](2024.06.07_XTTS.md); [VALL-E 2 [2]](2024.06.08_VALL-E_2.md); [StyleTTS2 [3]](2023.06.13_StyleTTS2.md)).
+One promising area in TTS is spoken language models (SLMs) ([VALL-E [4]](2023.01.05_VALL-E.md)), where a neural audio codec converts speech into a sequence of discrete tokens.
 Like text language models, SLMs are trained to predict the  next discrete token autoregressively, typically using a transformer-based architecture.
-But most prior SLM-based TTS systems exhibit a key limitation -- they are unstable~\cite{hu2024robust, han2024vallerrobustefficient}.
+But most prior SLM-based TTS systems exhibit a key limitation -- they are unstable ([RIO [5]](../../Modules/RLHF/2024.07.02_RIO.md); [VALL-E R [6]](2024.06.12_VALL-E_R.md)).
 When the reference audio or text is complex or out-of-domain, SLMs often perform poorly compared other TTS methodologies.
 
-While there have been several methods proposed to address such limitations, they are typically considered in isolation (e.g., repetition aware sampling~\cite{chen2024valle2neuralcodec}), or they drastically increase the runtime (e.g., multiple sampling~\cite{melle_meng2024autoregressive,chen2024valle2neuralcodec}).
+While there have been several methods proposed to address such limitations, they are typically considered in isolation (e.g., repetition aware sampling ([VALL-E 2 [2]](2024.06.08_VALL-E_2.md))), or they drastically increase the runtime (e.g., multiple sampling ([VALL-E 2 [2]](2024.06.08_VALL-E_2.md); [MELLE [7]](2024.07.11_MELLE.md))).
 To this end, we propose ***MARS6*** -- a 70M parameter SLM for robust, rapid and expressive TTS.
-We combine several recent techniques, and propose some new techniques from outside the TTS domain (e.g., odds ratio preference optimization~\cite{hong2024orpo} and a new top-$p$ fallback sampling mechanism).
+We combine several recent techniques, and propose some new techniques from outside the TTS domain (e.g., [odds ratio preference optimization [8]](../../Modules/RLHF/2024.03.12_ORPO.md) and a new top-$p$ fallback sampling mechanism).
 ***MARS6*** consists of an encoder-decoder transformer, and combines a hierarchical speech codec with a hierarchical decoder architecture to process speech tokens at a rate of 12~Hz.
 Together with the aforementioned inference techniques, this makes ***MARS6*** a highly robust and capable TTS model.
 It is also a showcase for a `bag of tricks' that we introduce for SLM-based TTS.
 
-For our experiments, we construct a difficult in-the-wild TTS evaluation set using the expressive EARS dataset~\cite{richter2024ears}.
+For our experiments, we construct a difficult in-the-wild TTS evaluation set using the expressive [EARS dataset [9]](../../Datasets/2024.06.10_EARS.md).
 We compare ***MARS6*** against prior diffusion- and autoregressive-based TTS models using objective and subjective evaluations.
 ***MARS6*** performs competitively, even against models many times its size.
 When used with voice cloning based on a snippet of reference audio, ***MARS6*** captures the target speaker identity closely, surpassing prior models in subjective speaker similarity evaluations.
@@ -75,15 +75,15 @@ Demo, samples, code, and checkpoints: https://camb-ai.github.io/mars6-turbo/.
 ## 2·Related Works: 相关工作
 
 Within SLMs, there are broadly three ways to approach speech tokenization.
-The first is to tokenize speech using acoustic tokens at a fixed sample rate, as done in EnCodec and DAC~\cite{defossez2022highfi,kumar2024high}.
-The second is to mix acoustic and semantic tokens using two different quantizers~\cite{baade24_interspeech}, e.g., using clustered HuBERT features for semantic and EnCodec for acoustic tokens.
-The third, which we explore here, is that of hierarchical acoustic codecs, such as SNAC~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024}.
+The first is to tokenize speech using acoustic tokens at a fixed sample rate, as done in [EnCodec [10]](../SpeechCodec/2022.10.24_EnCodec.md) and [DAC [11]](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md).
+The second is to mix acoustic and semantic tokens using two different quantizers ([Baade et al. [12]](../Voice_Conversion/2024.09.01_Neural_Codec_Language_Models_for_Distangled_&_Textless_Voice_Conversion.md)), e.g., using clustered HuBERT features for semantic and EnCodec for acoustic tokens.
+The third, which we explore here, is that of hierarchical acoustic codecs, such as [SNAC [13]](../SpeechCodec/2024.10.18_SNAC.md).
 These codecs quantize speech into acoustic tokens in different codebooks, each with its own sampling rate.
 This makes lower codebooks more 'coarse', and higher sample-rate codebooks 'fine'.
-The progenitor SLM TTS model, VALL-E, and its successors~\cite{wang2023neuralcodeclanguagemodels,chen2024valle2neuralcodec,han2024vallerrobustefficient}, uses an autoregressive transformer to predict the most coarse acoustic codebook, and a non-autoregressive model to predict the remaining codebook values.
+The progenitor SLM TTS model, VALL-E, and its successors ([VALL-E [4]](2023.01.05_VALL-E.md); [VALL-E 2[2]](2024.06.08_VALL-E_2.md); [VALL-E R [6]](2024.06.12_VALL-E_R.md)), uses an autoregressive transformer to predict the most coarse acoustic codebook, and a non-autoregressive model to predict the remaining codebook values.
 
 Despite success, VALL-E and its descendants often suffer from stability issues.
-Several studies have tried to address this~\cite{song2024ellavstableneuralcodec,dang2024livespeech}, e.g., by adding linguistic and phonemic constraints to improve coherence between the output speech  and the given input text~\cite{wang2024hamttshierarchicalacousticmodeling}.
+Several studies have tried to address this ([ELLA-V [14]](2024.01.14_ELLA-V.md); [LiveSpeech [15]](2024.06.05_LiveSpeech.md)), e.g., by adding linguistic and phonemic constraints to improve coherence between the output speech  and the given input text ([HAM-TTS [16]](2024.03.09_HAM-TTS.md)).
 But most of these improvements require phoneme alignments during training.
 The `bag-of-tricks' we introduce in this paper does not require such resources.
 
@@ -91,33 +91,38 @@ The `bag-of-tricks' we introduce in this paper does not require such resources.
 
 \figurename~\ref{fig:1_system_diagram} shows the ***MARS6*** model, which follows an encoder-decoder architecture.
 For zero-shot speaker cloning, the encoder takes in reference speaker embeddings together with the target text.
-The decoder is hierarchical and made of two components: a local and global decoder, similar to the proposal of~\cite{yu2024megabyte}.
-The global decoder takes input acoustic features in patches, and its output is fed into the local decoder to autoregressively predict all acoustic tokens for the next patch. Details are given next.\footnote{Mars is the Roman god of war. It is also the name of a chocolate bar first produced in 1932. ***MARS6*** was our sixth internal model version.}
+The decoder is hierarchical and made of two components: a local and global decoder, similar to the proposal of [MegaByte [17]](2023.05.12_MegaByte.md).
+The global decoder takes input acoustic features in patches, and its output is fed into the local decoder to autoregressively predict all acoustic tokens for the next patch.
+Details are given next.
+
+Note: Mars is the Roman god of war.
+It is also the name of a chocolate bar first produced in 1932.
+***MARS6*** was our sixth internal model version.
 
 ### Encoder and Input Representation
 
-The encoder is a non-causal transformer encoder using Mish activations~\cite{misra2019mish} with sinusoidal positional embeddings, similar to~\cite{vaswani2017}.
+The encoder is a non-causal transformer encoder using [Mish activations [18]](../../Modules/Activation/2019.08.23_Mish.md) with sinusoidal positional embeddings, similar to [Transformer [19]](../_Transformer/2017.06.12_Transformer.md).
 Its input sequence consists of two parts.
-First, to clone the target speaker, we compute a speaker embedding using a pretrained speaker verification model and a secondary embedding using CLAP~\cite{CLAP2023}.
+First, to clone the target speaker, we compute a speaker embedding using a pretrained speaker verification model and a secondary embedding using [CLAP [20]](../_Basis/CLAP.md).
 The former, being trained mostly on non-emotive speech, gives a good base speaker representation.
 But, for expressive references where the speaker verifier's embeddings are less meaningful, the more broadly trained (but less speaker-specific) CLAP embedding is useful.
 These two vectors are mapped to the dimension of the transformer using a projection layer, and then joined along the sequence length ('speaker embeddings' in Fig.~\ref{fig:1_system_diagram}).
 Second is the sequence of text embeddings corresponding to the desired text being spoken  ('text embeddings' in Fig.~\ref{fig:1_system_diagram}).
-To reduce the token count and improve speed, the text is tokenized using byte-pair encoding (BPE)~\cite{gage1994new_bpe}.
+To reduce the token count and improve speed, the text is tokenized using [byte-pair encoding (BPE) [21]](../_Basis/2015.08.31_BPE.md) [Note: Original Citation is "A New Algorithm for Data Compression (1994)"].
 
-To improve reference coherence and output stability, we adapt a lesson from~\cite{allenzhu2024physicslanguagemodels33}.
-We give the encoder a way to learn when an output should be high fidelity (e.g., 48~kHz audio from VCTK~\cite{Yamagishi2019CSTRVC} downsampled to the 24~kHz codec sampling rate) or lower fidelity (e.g., upsampled 16~kHz audiobook data).
-To indicate the target quality to the encoder, we prepend the original sample rate to the text, e.g. for 16~kHz, "Mister \ldots" becomes "[16000] Mister \ldots ".
+To improve reference coherence and output stability, we adapt a lesson from "Physics of Language Models: Part 3.3 Knowledge Capacity Scaling Laws". #TODO
+We give the encoder a way to learn when an output should be high fidelity (e.g., 48~kHz audio from [VCTK [23]](../../Datasets/2012.08.00_VCTK.md) downsampled to the 24~kHz codec sampling rate) or lower fidelity (e.g., upsampled 16~kHz audiobook data).
+To indicate the target quality to the encoder, we prepend the original sample rate to the text, e.g., for 16~kHz, "Mister ..." becomes "[16000] Mister ...".
 
 ### Global Decoder
 
-***MARS6*** operates on hierarchical acoustic tokens from the SNAC acoustic model~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024}.
+***MARS6*** operates on hierarchical acoustic tokens from the SNAC acoustic model ([SNAC [13]](../SpeechCodec/2024.10.18_SNAC.md)).
 SNAC encodes speech into discrete sequences using residual vector quantization with codebooks at different sampling rates, representing different levels in a hierarchy, where earlier codebooks are sampled less frequently.
-For ***MARS6*** we use the 3-codebook SNAC~\cite{Siuzdak_SNAC_Multi-Scale_Neural_2024}, with codebook sample rates of 12 ($L_0$), 24 ($L_1$), and 48~Hz ($L_2$).
+For ***MARS6*** we use the 3-codebook [SNAC [13]](../SpeechCodec/2024.10.18_SNAC.md), with codebook sample rates of 12 ($L_0$), 24 ($L_1$), and 48~Hz ($L_2$).
 
 Like the encoder, this decoder uses Mish activations and sinusoidal positional embeddings.
 The global decoder takes patches of acoustic tokens from SNAC at
-12~Hz, whereby all codebook tokens generated within  $\frac{1}{12}$s are flattened and fed through a patch embedding~\cite{yu2024megabyte} to yield a 12~Hz input vector sequence as shown in \figurename~\ref{fig:1_system_diagram}.
+12~Hz, whereby all codebook tokens generated within  $\frac{1}{12}$s are flattened and fed through a patch embedding ([MegaByte [17]](2023.05.12_MegaByte.md)) to yield a 12~Hz input vector sequence as shown in \figurename~\ref{fig:1_system_diagram}.
 This corresponds to a patch size of seven, since for every $\frac{1}{12}$s, there is one token from the 12~Hz $L_0$ codebook, two from the 24~Hz $L_1$ codebook, and four from the 48~Hz $L_2$ codebook.
 
 ### Local Decoder
@@ -139,7 +144,7 @@ During training, an end-of-sequence token is appended to the acoustic tokens of 
 
 ### Inference and Fine-Tuning Techniques
 
-***MARS6*** is fast and small because most of its parameters operatore on only a 12~Hz sequence in the global decoder.
+***MARS6*** is fast and small because most of its parameters operate on only a 12~Hz sequence in the global decoder.
 The shorter sequence can also improve stability.
 But on its own, this new architecture does not solve the SLM-robustness problem.
 Below we introduce and incorporate a `bag of tricks' for inference and fine-tuning to improve stability and performance.
@@ -150,21 +155,21 @@ We split model training into two parts: pretraining and fine-tuning.
 Pretraining involves next-token prediction, as described earlier.
 We then fine-tune the model using a curated high-quality subset of the training data.
 
-For fine-tuning, we combine odds ratio preference optimization (ORPO)~\cite{hong2024orpo} and reverse inference optimization (RIO)~\cite{hu2024robust}.
+For fine-tuning, we combine [odds ratio preference optimization (ORPO) [8]](../../Modules/RLHF/2024.03.12_ORPO.md) and [reverse inference optimization (RIO) [5]](../../Modules/RLHF/2024.07.02_RIO.md).
 First, we compute the pretraining model predictions on arbitrary text using reference waveforms from a high quality subset of the training data.
-We then feed these outputs back to ***MARS6*** as references, with the transcript of the original reference, and predict the original reference audio in a cyclic way, as in~\cite{hu2024robust}.
-We then rank the cyclic outputs based on character error rate and UTMOS~\cite{saeki2022utmos}, and select the worst performing outputs as 'rejected' samples, and the corresponding ground truth audio as 'chosen' samples for ORPO.
+We then feed these outputs back to ***MARS6*** as references, with the transcript of the original reference, and predict the original reference audio in a cyclic way, as in [RIO [5]](../../Modules/RLHF/2024.07.02_RIO.md).
+We then rank the cyclic outputs based on character error rate and [UTMOS [24]](../../Evaluations/2022.04.05_UTMOS.md), and select the worst performing outputs as 'rejected' samples, and the corresponding ground truth audio as 'chosen' samples for ORPO.
 While not precisely the same as either the original ORPO (where both chosen and rejected samples come from model predictions) or RIO (where both the best and worst-performing cyclic outputs are used), we found this setup to yield the best results in preliminary experiments.
 
-We also found that the model had a tendency to get stuck producing the same acoustic token -- this is why prior work incorporate semantic tokens in addition to acoustic tokens~\cite{baade24_interspeech}.
-To remedy this, we incorporate a flux loss to penalize repetitive generations~\cite{meng2024autoregressive}.
-We adapt the flux loss used for the continuous autoregressive TTS~\cite{meng2024autoregressive} to discrete units, defining it as:
+We also found that the model had a tendency to get stuck producing the same acoustic token -- this is why prior work incorporate semantic tokens in addition to acoustic tokens ([Baade et al. [12]](../Voice_Conversion/2024.09.01_Neural_Codec_Language_Models_for_Distangled_&_Textless_Voice_Conversion.md)).
+To remedy this, we incorporate a flux loss to penalize repetitive generations ([MELLE [25]](2024.07.11_MELLE.md)).
+We adapt the flux loss used for the continuous autoregressive TTS ([MELLE [25]](2024.07.11_MELLE.md)) to discrete units, defining it as:
 
 $$
     \mathcal{L}_{\text{flux}} = \frac{\beta}{\epsilon + \text{CrossEntropy}(\hat{\mathbf{y}_t}, y_{t-1})}
 $$
 
-where $\beta$ is a scaling coefficient for the loss term, $\epsilon$ is a small offset added for numerical stability, $\hat{\mathbf{y}}_t$ is the decoder logit predictions at timestep $t$, and $y_{t-1}$ is the ground truth codebook index of the \textit{prior timestep}.
+where $\beta$ is a scaling coefficient for the loss term, $\epsilon$ is a small offset added for numerical stability, $\hat{\mathbf{y}}_t$ is the decoder logit predictions at timestep $t$, and $y_{t-1}$ is the ground truth codebook index of the prior timestep.
 Intuitively, this penalizes the probability of the token in the prior timestep.
 We apply this flux loss to $L_0$ codebook predictions, during both ORPO fine-tuning and pretraining, each with different weightings.
 
@@ -174,17 +179,19 @@ We apply this flux loss to $L_0$ codebook predictions, during both ORPO fine-tun
 We combine three inference methods.
 
 - **Repetition Aware Sampling (RAS)**
-  This approach from~\cite{chen2024valle2neuralcodec} is used on the local decoder predictions for positions corresponding to the $L_0$.
+  This approach from [VALL-E 2[2]](2024.06.08_VALL-E_2.md) is used on the local decoder predictions for positions corresponding to the $L_0$.
 Using the notation of the original paper, we found $K=10, t_r=0.09$ to yield best results.
 
 - **Quality Prefixing**
-  As mentioned in Sec.~\ref{subsec:encoder}, in training we prepend the original sample rate of the reference to the text to give the model am indication for output quality. In inference, we always set this to ``[48000]'' to maximize output quality.
+  As mentioned in Sec.~\ref{subsec:encoder}, in training we prepend the original sample rate of the reference to the text to give the model am indication for output quality.
+  In inference, we always set this to ``[48000]'' to maximize output quality.
 
 - **Top-P Backoff Sampling**
   SLM outputs can be made more stable by sampling with a low top-$p$ value.
 However, sometimes this can cause the model to still get stuck in a loop.
-We alleviate this by using a backoff approach similar to the temperature backoff used by Whisper~\cite{whisper_radford2022robust}.
-Concretely, we sample with a top-$p$ of 0.2, and check the output length before vocoding. If the predicted audio is unrealistically short, we increment the top-$p$ by 0.2 and sample again.
+We alleviate this by using a backoff approach similar to the temperature backoff used by [Whisper [26]](2022.12.06_Whisper.md).
+Concretely, we sample with a top-$p$ of 0.2, and check the output length before vocoding.
+If the predicted audio is unrealistically short, we increment the top-$p$ by 0.2 and sample again.
 
 #### Shallow and Deep Cloning
 
@@ -199,13 +206,13 @@ This gives better prosody and speaker transfer from the reference, at the cost o
 ### Evaluation Data & Baselines
 
 Many evaluation benchmarks do not capture the diversity of in-the-wild speech.
-We therefore construct a new evaluation set on the emotive EARS dataset~\cite{richter2024ears}.
+We therefore construct a new evaluation set on the emotive [EARS dataset [9]](../../Datasets/2024.06.10_EARS.md).
 It includes emotional speech, different reading styles, free-form conversational speech, and non-verbal sounds recorded in an anechoic environment from 107 English speakers.
 We select 43 speakers for the test set and 64 for the validation set.
 Ignoring the non-verbal, free-form and `slow' utterances, we select half of the samples (audio and transcript) for each style, and pair each sample with another of the same speaker and style to serve as the voice cloning reference.
 ***MARS6*** and the baseline models have, to the best of our knowledge, not seen any part of EARS.
 
-We compare the 70M-parameter ***MARS6*** against three strong baseline models, all much larger: XTTSv2~\cite{casanova2024xtts_interspeech} (460M parameters), StyleTTS2~\cite{li2024styletts} (148M parameters), and MetaVoice-1B~\cite{MetaVoice2024} (1.2B parameters).
+We compare the 70M-parameter ***MARS6*** against three strong baseline models, all much larger: [XTTSv2 [1]](2024.06.07_XTTS.md) (460M parameters), [StyleTTS2 [3]](2023.06.13_StyleTTS2.md) (148M parameters), and [MetaVoice-1B [27] [URL]](https://github.com/metavoiceio/metavoice-src) (1.2B parameters).
 We use the best available checkpoints and the best inference settings from each paper.
 
 ### MARS6 Implementation
@@ -213,17 +220,17 @@ We use the best available checkpoints and the best inference settings from each 
 #### Model
 
 We use standard 8-layer, 512-dimensional transformers for the encoder and global decoder, and a 4-layer local decoder.
-For the two speaker embeddings, we use WavLM-SV~\cite{WavLMBaseSV2024} and the pretrained MS-CLAP~\cite{CLAP2023}.
+For the two speaker embeddings, we use [WavLM-SV [28] [URL]](https://huggingface.co/microsoft/wavlm-base-plus-sv) and the pretrained [MS-CLAP[20]](../_Basis/CLAP.md).
 We train the BPE tokenizer to a vocabulary size of 512.
 
 #### Training
 
-We train ***MARS6*** for 2M steps using AdamW~\cite{loshchilov2017decoupled} with a linearly decaying learning rate starting at $5\cdot10^{-4}$ (after a 10k step linear warmup) and ending at $2.5\cdot10^{-5}$.
+We train ***MARS6*** for 2M steps using [AdamW [29]](../../Modules/Optimization/2017.11.14_AdamW.md) with a linearly decaying learning rate starting at $5\cdot10^{-4}$ (after a 10k step linear warmup) and ending at $2.5\cdot10^{-5}$.
 We use an AdamW $\beta$ of $(0.9,0.995)$, weight decay of $2\cdot10^{-2}$, and batch size of 96.
 
 #### Data
 
-We train ***MARS6*** on the following publically available datasets: LibriHeavy~\cite{kang2024libriheavy}, GLOBE~\cite{wang2024globe}, VCTK~\cite{Yamagishi2019CSTRVC}, AniSpeech~\cite{AniSpeech2024}, and CCv2~\cite{Porgali_2023_CVPR}.
+We train ***MARS6*** on the following publically available datasets: [LibriHeavy [30]](../../Datasets/2023.09.15_Libriheavy.md), [GLOBE [31]](../../Datasets/2024.06.21_GLOBE.md), [VCTK [23]](../../Datasets/2012.08.00_VCTK.md), [AniSpeech [32] [URL]](https://huggingface.co/datasets/ShoukanLabs/AniSpeech), and [CCv2 [33]](../../Datasets/CCv2.md).
 We limit the number of utterances from each speaker to be at most 80k.
 Together this results in a training dataset of roughly 46k hours.
 
@@ -232,24 +239,24 @@ Together this results in a training dataset of roughly 46k hours.
 #### Objective Evaluation
 
 We measure intelligibility using the word/character error rate (W/CER) between the predicted outputs on our EARS test set and the ground truth audio.
-We obtain transcripts of the generated audio using the Whisper-base speech recognition model~\cite{whisper_radford2022robust}.
-We objectively measure speaker cloning ability using the equal-error rate (EER) for a pretrained speaker verification system~\cite{xvector}.
+We obtain transcripts of the generated audio using the Whisper-base speech recognition model ([Whisper [26]](2022.12.06_Whisper.md)).
+We objectively measure speaker cloning ability using the equal-error rate (EER) for a pretrained speaker verification system ([X-Vectors [34]](../SpeechRepresentation/X-vectors.md)).
 The verification system produces a similarity score between pairs of utterances.
-We compute these similarities on \textit{(ground truth reference, generated)} pairs and \textit{(ground truth reference, other ground truth)} pairs from the same speaker.
+We compute these similarities on (ground truth reference, generated) pairs and (ground truth reference, other ground truth) pairs from the same speaker.
 The former pairs are assigned a label of 0, and latter a label of 1.
-Thsese can then be used to compute an EER as in~\cite{zhao2020voiceconversionchallenge2020}.
+Thsese can then be used to compute an EER as in [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
 A higher EER indicates that it is harder to distinguish generated speech from ground truth examples of the reference speaker, up to a theoretical maximum of 50\%.
-We also report an approximated mean naturalness metric using the pretrained UTMOS model~\cite{saeki2022utmos} predicting naturalness scores on a scale of 1-5.
+We also report an approximated mean naturalness metric using the pretrained [UTMOS [24]](../../Evaluations/2022.04.05_UTMOS.md) model predicting naturalness scores on a scale of 1-5.
 
 #### Subjective Evaluation
 
 We perform two subjective evaluations using Amazon Mechanical Turk.
 In the first, we collect a mean opinion score (MOS) on a 1-5 scale.
-In the second, we collect a speaker similarity score (SIM) on a 1-4 scale following the protocol of the Voice Conversion Challenge 2020~\cite{zhao2020voiceconversionchallenge2020}.
+In the second, we collect a speaker similarity score (SIM) on a 1-4 scale following the protocol of the [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
 From the EARS test set, we select 36 utterances from each baseline, the ground truth, and ***MARS6*** (both using shallow and deep clone).
 We include trapping and calibration samples to filter out anomalous listeners, resulting in 1326 ratings from 2340 unique listeners.
 For SIM, each evaluated utterance (from the baselines, ***MARS6***, or actual ground truth audio) is paired with another random utterance from the same speaker and speaking style.
-We present the listener these samples side-by-side and ask them to rate how similar the speaker sounds on a 1-4 scale similar to~\cite{zhao2020voiceconversionchallenge2020}.
+We present the listener these samples side-by-side and ask them to rate how similar the speaker sounds on a 1-4 scale similar to [Voice Conversion Challenge 2020 [35]](../Voice_Conversion/VC_Challenge_2020.md).
 After filtering anomalous listeners, we have 1980 SIM ratings from 40 unique listeners.
 
 ## 5·Results: 结果
