--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -100,6 +100,9 @@ Demo, samples, code, and checkpoints: https://camb-ai.github.io/mars6-turbo/.
 
 ## 2·Related Works: 相关工作
 
+<details>
+<summary>展开原文</summary>
+
 Within SLMs, there are broadly three ways to approach speech tokenization.
 The first is to tokenize speech using acoustic tokens at a fixed sample rate, as done in [EnCodec [10]](../SpeechCodec/2022.10.24_EnCodec.md) and [DAC [11]](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md).
 The second is to mix acoustic and semantic tokens using two different quantizers ([Baade et al. [12]](../Voice_Conversion/2024.09.01_Neural_Codec_Language_Models_for_Distangled_&_Textless_Voice_Conversion.md)), e.g., using clustered HuBERT features for semantic and EnCodec for acoustic tokens.
@@ -109,9 +112,26 @@ This makes lower codebooks more 'coarse', and higher sample-rate codebooks 'fine
 The progenitor SLM TTS model, VALL-E, and its successors ([VALL-E [4]](2023.01.05_VALL-E.md); [VALL-E 2[2]](2024.06.08_VALL-E_2.md); [VALL-E R [6]](2024.06.12_VALL-E_R.md)), uses an autoregressive transformer to predict the most coarse acoustic codebook, and a non-autoregressive model to predict the remaining codebook values.
 
 Despite success, VALL-E and its descendants often suffer from stability issues.
-Several studies have tried to address this ([ELLA-V [14]](2024.01.14_ELLA-V.md); [LiveSpeech [15]](2024.06.05_LiveSpeech.md)), e.g., by adding linguistic and phonemic constraints to improve coherence between the output speech  and the given input text ([HAM-TTS [16]](2024.03.09_HAM-TTS.md)).
+Several studies have tried to address this ([ELLA-V [14]](2024.01.14_ELLA-V.md); [LiveSpeech [15]](2024.06.05_LiveSpeech.md)), e.g., by adding linguistic and phonemic constraints to improve coherence between the output speech and the given input text ([HAM-TTS [16]](2024.03.09_HAM-TTS.md)).
 But most of these improvements require phoneme alignments during training.
 The 'bag-of-tricks' we introduce in this paper does not require such resources.
+
+</details>
+<br>
+
+在口语语言模型内, 大致有三种方式来处理语音 Token.
+- 第一种, 使用固定采样率的声学 Token: 如 [EnCodec [10]](../SpeechCodec/2022.10.24_EnCodec.md) 和 [DAC [11]](../SpeechCodec/2023.06.11_Descript-Audio-Codec.md).
+- 第二种, 使用两个不同的量化器来混合声学 Token 和语义 Token ([Baade et al. [12]](../Voice_Conversion/2024.09.01_Neural_Codec_Language_Models_for_Distangled_&_Textless_Voice_Conversion.md)), 如使用聚类的 HuBERT 特征来表示语义 Token, 而 EnCodec 来表示声学 Token.
+- 第三种, 也是我们所探索的, 分层声学编解码器 (如 [SNAC [13]](../SpeechCodec/2024.10.18_SNAC.md)).
+这些编解码器将语音量化到具有不同码本的声学 Token, 每个码本都有自己的采样率.
+这使得较底层的码本更 "粗略", 而较高层的码本 "精细".
+
+最初的口语语言模型 TTS 模型, VALL-E, 及其后继者 ([VALL-E [4]](2023.01.05_VALL-E.md); [VALL-E 2[2]](2024.06.08_VALL-E_2.md); [VALL-E R [6]](2024.06.12_VALL-E_R.md)) 使用自回归 Transformer 来预测最粗略的声学码本, 而非自回归模型来预测剩余的码本值.
+尽管取得了成功, VALL-E 和其后继者仍然存在稳定性问题.
+已经有一些研究试图解决这一问题 ([ELLA-V [14]](2024.01.14_ELLA-V.md); [LiveSpeech [15]](2024.06.05_LiveSpeech.md)), 如通过增加语言和音素约束来提高输出语音与给定输入文本的一致性 ([HAM-TTS [16]](2024.03.09_HAM-TTS.md)).
+但大多数改进需要在训练时进行音素对齐.
+
+我们在本文中引入的 "全套技巧" 没有这种资源需求.
 
 ## 3·Methodology: 方法
 
