--- a/Models/SpeechLM/2025.01.10_MARS6.md
+++ b/Models/SpeechLM/2025.01.10_MARS6.md
@@ -341,6 +341,9 @@ $$
 
 #### Inference Algorithms: 推理算法
 
+<details>
+<summary>展开原文</summary>
+
 We combine three inference methods.
 
 - **Repetition Aware Sampling (RAS)**
@@ -358,13 +361,36 @@ We alleviate this by using a backoff approach similar to the temperature backoff
 Concretely, we sample with a top-$p$ of 0.2, and check the output length before vocoding.
 If the predicted audio is unrealistically short, we increment the top-$p$ by 0.2 and sample again.
 
-#### Shallow and Deep Cloning
+</details>
+<br>
+
+我们结合了三种推理方法:
+- **重复感知采样 (Repetition Aware Sampling, RAS)**: 这一方法来自 [VALL-E 2[2]](2024.06.08_VALL-E_2.md), 用于局部解码器预测 $L_0$ 对应的位置.
+  我们使用原始论文的记号, 发现 $K=10, t_r=0.09$ 能够获得最佳结果.
+- **质量前缀 (Quality Prefixing)**: 如编码器一节所述, 在训练时, 我们将原始参考的采样率作为文本的前缀, 以给模型提供输出质量的提示. 在推理时, 我们总是将其设置为 "[48000]" 以最大化输出质量.
+- **Top-P 回退采样 (Top-P Backoff Sampling)**: SLM 输出可以通过较低的 Top-$p$ 值采样来使其更加稳定. 但有时仍会使得模型陷入循环.
+我们通过类似于 [Whisper [26]](2022.12.06_Whisper.md) 所使用的温度回退的退避方法来缓解这一问题.
+具体地, 我们用值为 0.2 的 Top-$p$ 采样, 并在转换成语音之前检查输出长度. 如果预测的音频短到不切实际, 我们将 Top-$p$ 值增加 0.2 并再次采样.
+
+#### Shallow and Deep Cloning: 浅克隆和深克隆
+
+<details>
+<summary>展开原文</summary>
 
 ***MARS6*** can clone from a reference in two ways -- shallow clone and deep clone.
 The prior is where we compute the speaker embeddings from the reference audio and perform inference directly.
 While simple, the speaker similarity is not optimal.
 The latter is similar to the approach of VALL-E, where we assume knowledge of the reference transcript, and then assign a prefix to both the encoder and global decoder as the reference transcript and acoustic tokens, respectively.
 This gives better prosody and speaker transfer from the reference, at the cost of inference time (longer sequence length).
+
+</details>
+<br>
+
+***MARS6*** 可以从参考中以两种方式进行克隆: 浅克隆和深克隆.
+- 前者是我们从参考音频中计算说话人嵌入并直接进行推理.
+  虽然简单, 但说话人相似度并不最优.
+- 后者类似于 VALL-E 的方法, 我们假设有参考对应的文本知识, 然后将前缀分配给编码器和全局解码器, 分别作为参考文本和声学 Token.
+  这能够从参考中获得更好的韵律和说话人迁移效果, 但代价是推理时间 (更长的序列长度).
 
 ## 4·Experiments: 实验
 
